--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,12 @@
 <title>Station 1</title>
 </head>
 <body>
+    <img src="./assets/image/railway-thumbnail.png" alt="画像を表示">
+    <p>TechTrainの使い方</p>
+    <span>TechBowl</span>
+    
+    <div>
+        Suguru Ohki<br>6,722回視聴・2021/04/22
+    </div>
 </body>
 </html>
