--- a/src/station4.html
+++ b/src/station4.html
@@ -1,1 +1,23 @@
 <!doctype html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/station4.css" type="text/css">
+    <title>Station 4</title>
+  </head>
+  <body>
+    <header>
+    </header>
+    <div class="card">
+      <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
+      <p class="card__title"><b>TechTrain</b>の使い方</p>
+      <p class="card__title"><b>TechBowl</b></p>
+      <p class="card__description"><br>Suguru Ohki</p>
+      <p class="card__description">6,722 回視聴・2021/04/22</p>
+    </div>
+    <footer>
+    </footer>
+  </body>
+</html>
