--- a/src/station4.html
+++ b/src/station4.html
@@ -14,7 +14,8 @@
       <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
       <p class="card__title"><b>TechTrain</b>の使い方</p>
       <p class="card__title"><b>TechBowl</b></p>
-      <p class="card__description"><br>Suguru Ohki</p>
+      <p class="card__description"><br></p>
+      <p class="card__description">Suguru Ohki</p>
       <p class="card__description">6,722 回視聴・2021/04/22</p>
     </div>
     <footer>
