--- a/src/station4.html
+++ b/src/station4.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+      
     </header>
     <div class="card">
       <img src="./assets/image/railway-thumbnail.png" class="card__img-top" />
@@ -19,6 +20,7 @@
       <p class="card__description">6,722 回視聴・2021/04/22</p>
     </div>
     <footer>
+      
     </footer>
   </body>
 </html>
